chore: improve docs
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -1,6 +1,7 @@
 ---
 title: What is Distr?
 description: A software distribution platform for delivering applications across varied deployment scenarios
+slug: docs/getting-started/what-is-distr
 sidebar:
   order: 1
 ---
@@ -10,7 +11,8 @@ import ThemeImage from '../../../../components/ThemeImage.astro';
 
 Distr is an open source software distribution platform built for multiple [deployment scenarios](/docs/use-cases/fully-self-managed/). It enables software and AI companies to distribute applications and artifacts to self-managed environments.
 
-Distr provides distribution tooling for [self-managed](/docs/use-cases/fully-self-managed/), [BYOC](/docs/use-cases/byoc/), [air-gapped](docs/use-cases/air-gapped/), and [edge deployments](/docs/use-cases/edge-deployments/) while giving vendors visibility and control throughout the application lifecycle.
+Distr provides distribution tooling for [self-managed](/docs/use-cases/fully-self-managed/asdf/as), [BYOC](/docs/use-cases/byoc/), [air-gapped](/docs/use-cases/air-gapped/),
+and [edge deployments](/docs/use-cases/edge-deployments/) while giving vendors visibility and control throughout the application lifecycle.
 
 ## Architecture
 
@@ -30,7 +32,7 @@ Distr provides distribution tooling for [self-managed](/docs/use-cases/fully-sel
 | 📦 **Multiple package formats**      | Distributes Docker Compose files, Helm charts and any OCI-compliant artifact.                                                                                                              |
 | 🔍 **Complete visibility**           | Centralized monitoring of deployment status, versions, and health across all customer environments.                                                                                        |
 | 📋 **Deployment flexibility**        | Available as both a managed SaaS and a [self-hosted](/docs/self-hosting/getting-started/) solution                                                                                         |
-| 📱 **Dual portal system**            | Vendor Portal for complete control and Customer Portal for simplified, [white-labeled](docs/product/branding/) end-customer access.                                                        |
+| 📱 **Dual portal system**            | Vendor Portal for complete control and Customer Portal for simplified, [white-labeled](/docs/product/branding/) end-customer access.                                                       |
 
 ## Who is Distr for?
 
