--- a/src/content/docs/docs/getting-started/deployment-methods.mdx
+++ b/src/content/docs/docs/getting-started/deployment-methods.mdx
@@ -7,11 +7,9 @@ sidebar:
 
 import {Aside} from '@astrojs/starlight/components';
 
-## Deployment Methods
-
 As an Open Source platform, Distr offers two deployment methods to suit different organizational needs:
 
-### SaaS (Hosted by Distr)
+## SaaS (Hosted by Distr)
 
 The fastest way to get started. Our fully hosted offering includes:
 
@@ -20,14 +18,14 @@ All in the free tier:
 - Up to 3 users
 - Basic license management
 - Unlimited deployments
-- Helm, Docker, and Terraform agents (Terraform coming soon)
-- Private registry (100 GB)
+- Helm, Docker, and Terraform agents _(Terraform coming soon)_
+- Private registry (100GB)
 - GitHub integration
-- Live metrics & logs (OpenTelemetry-compatible, no retention)
+- Live metrics & logs (no retention)
 - Distr API access
 - Immediate access to new features
 
-To check view the other plans go to the [pricing page here](https://glasskube.dev/pricing/).
+To view the other plans, visit [our pricing page](https://glasskube.dev/pricing/).
 
 <Aside type="tip">
   Get started immediately by creating your free Distr account
@@ -35,18 +33,17 @@ To check view the other plans go to the [pricing page here](https://glasskube.de
   tutorials](/docs/getting-started/quickstart/#getting-started-with-platform-tutorials).
 </Aside>
 
-### Self-Hosted
+## Self-Managed
 
-Best for teams with compliance or infrastructure needs:
+Best for teams with the highest compliancy needs:
 
 - Deploy in your own cloud or on-prem
 - Full control over versioning and availability
 - Same features as SaaS
 - Ideal for data-sensitive or regulated environments
+- Experience using Distr for self-managing your own Distr deployment
 
 <Aside type="note">
-  Self-hosted deployments use the same semantic versioning as our SaaS offering,
-  making it easy to stay up-to-date with the latest features. For setup
-  instructions, see our [Self-Hosting
-  Guide](/docs/self-hosting/getting-started).
+  If you want to ty out Distr completely by yourself, check out our
+  [Self-Hosting Guide](/docs/self-hosting/getting-started).
 </Aside>
