--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -28,7 +28,7 @@ In this tutorial, you'll learn how to download and install a [Distr agent](/docs
 
 ### 3. Invite Your First Customer Tutorial
 
-This tutorial guides you through setting up your [Customer Portal](/docs/product/distr-hub/#what-customers-can-do-in-the-customer-portal) and inviting a customer. You'll learn how to customize the portal name and welcome page with helpful instructions and release notes, send the customer invite email, and preview the portal from the end customer's perspective.
+This tutorial guides you through setting up your [Customer Portal](/docs/product/customer-portal/) and inviting a customer. You'll learn how to customize the portal name and welcome page with helpful instructions and release notes, send the customer invite email, and preview the portal from the end customer's perspective.
 
 ## Accessing the Tutorials
 
@@ -45,7 +45,7 @@ Upon completion, you'll be ready to:
 
 1. **Onboard Your Own Applications:** Add your [Docker Compose](/docs/guides/platform-management/onboarding-a-docker-app/) or [Helm chart-based applications](/docs/guides/platform-management/onboarding-a-helm-app/) to Distr
 2. **Push Your Artifacts:** Store your artifacts in your private [registry](/docs/product/registry/)
-3. **Invite Customers:** Invite new [customers](docs/guides/platform-management/onboarding-a-new-customer/) into your organization
+3. **Invite Customers:** Invite new [customers](/docs/guides/platform-management/onboarding-a-new-customer/) into your organization
 
 ### Next, explore the Use cases section
 
