--- a/src/content/docs/docs/guides/how-to-registry.mdx
+++ b/src/content/docs/docs/guides/how-to-registry.mdx
@@ -1,6 +1,7 @@
 ---
 title: How to set up and use the Registry
 description: Step-by-step instructions for configuring your registry slug, authenticating with a PAT, pushing OCI artifacts, and managing access and usage analytics in the Distr Artifact Registry.
+slug: docs/guides/container-registry
 sidebar:
   order: 3
 ---
@@ -76,7 +77,7 @@ Replace slug with your configured registry slug, and 1.0.0 with your desired ver
 ## 5. Customer Access
 
 - Customers should authenticate with their own [PAT](/docs/integrations/personal-access-token/) and can only pull artifacts they are licensed for.
-- The [customer portal](/docs/guides/end-customer-registry-view/#registry-quickstart-from-the-customer-portal) provides a simplified view, the registry UI only shows the artifacts and versions that are accessible to the user.
+- The [customer portal](/docs/guides/container-registry-for-end-customers/#registry-quickstart-from-the-customer-portal) provides a simplified view, the registry UI only shows the artifacts and versions that are accessible to the user.
 
 <ThemeImage
   lightSrc="/src/assets/docs/product/registry/customer-artifact-view-light.png"
