--- a/src/content/docs/docs/product/vendor-portal.mdx
+++ b/src/content/docs/docs/product/vendor-portal.mdx
@@ -7,7 +7,7 @@ sidebar:
 
 import ThemeImage from '../../../../components/ThemeImage.astro';
 
-The Vendor Portal serves as the control plane for vendors, providing access to all Distr features, including [application onboarding](/docs/guides/onboarding-a-helm-app/), [artifact registry](/docs/guides/how-to-registry/) management, and monitoring of end-customer deployment states. In contrast, the [Customer Portal](/docs/product/customer-portal/) offers a simplified interface for end customers, allowing them to configure and manage their deployments while centralizing release information and helpful instructions for operating the vendor’s software.
+The Vendor Portal serves as the control plane for vendors, providing access to all Distr features, including [application onboarding](/docs/guides/onboarding-a-helm-app/), [artifact registry](/docs/guides/container-registry/) management, and monitoring of end-customer deployment states. In contrast, the [Customer Portal](/docs/product/customer-portal/) offers a simplified interface for end customers, allowing them to configure and manage their deployments while centralizing release information and helpful instructions for operating the vendor’s software.
 
 <ThemeImage
   lightSrc="/src/assets/docs/product/vendor-portal/hub-light.png"
@@ -33,6 +33,6 @@ The Vendor Portal serves as the control plane for vendors, providing access to a
 
 8. **Customer Portal Customization**: [White-label](/docs/product/branding/) the portal with your branding and provide customers with self-service instructions and documentation.
 
-9. **Organization Settings**: Set your organization name and configure your registry [slug](/docs/guides/how-to-registry/#1-set-your-registry-slug) in the _Settings_ section.
+9. **Organization Settings**: Set your organization name and configure your registry [slug](/docs/guides/container-registry/#1-set-your-registry-slug) in the _Settings_ section.
 
-10. **Account button**: Use the account section to create create [Personal Access Tokens](docs/integrations/personal-access-token/) associated to your account for API, SKD and Registry authentication.
+10. **Account button**: Use the account section to create [Personal Access Tokens](/docs/integrations/personal-access-token/) associated to your account for API, SKD and Registry authentication.
