--- a/src/content/docs/docs/use-cases/air-gapped.mdx
+++ b/src/content/docs/docs/use-cases/air-gapped.mdx
@@ -8,17 +8,16 @@ sidebar:
 import {Aside, Steps, Tabs, TabItem} from '@astrojs/starlight/components';
 import ThemeImage from '../../../../components/ThemeImage.astro';
 
-### Air-Gapped Deployments
-
-Distr supports air-gapped environments where strict security requirements demand physical or logical isolation from public networks. This deployment model is ideal for organizations in regulated industries, such as defense, finance, and critical infrastructure, where external connectivity or the use of agents is not permitted.
+Distr supports air-gapped environments where strict security requirements demand physical or logical isolation from public networks.
+This deployment model is ideal for organizations in regulated industries, such as defense, finance, and critical infrastructure,
+where external connectivity or the use of agents is not permitted.
 
 Distr offers two approaches to support these environments:
 
 1. **IP Whitelisting**: For environments that can allow limited outbound connections.
+2. **Self-Managed Registry with Physical Transfers**: For fully isolated environments, Distr supports a workflow where updates are packaged, encrypted, and physically transferred (e.g., via USB or secure media).
 
-2. **Self-Hosted Registry with Physical Transfers**: For fully isolated environments, Distr supports a workflow where updates are packaged, encrypted, and physically transferred (e.g., via USB or secure media).
-
-### Solution Architecture
+## Solution Architecture
 
 <ThemeImage
   lightSrc="/src/assets/docs/use-cases/airgapped/airgapped-light.png"
@@ -26,36 +25,34 @@ Distr offers two approaches to support these environments:
   alt="Fully-Self-Managed diagram"
 />
 
+## Implementation Steps
+
 <Tabs>
   <TabItem label="IP Whitelisting Approach">
-    <Steps>
-    1. **Set Up Your [Registry](/docs/guides/how-to-registry/)**
-    2. **Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)**
-    3. **White-label the [Customer portal](/docs/product/branding/)**
-    4. **Onboard your first [customer](/docs/guides/onboarding-a-new-customer/)**
-    5. **Request IP Allowlist for Customer Access**
-    6. **Customer creates a [Personal Access token](/docs/integrations/personal-access-token/)**
-    7. **Customer can [access and pull](/docs/guides/end-customer-registry-view/#registry-quickstart-from-the-customer-portal) your private artifacts**
-    </Steps>
-
-    <Aside type="tip">
+    <Aside type="note">
       This approach works for environments where limited external connectivity is permitted
       and the Distr's IP addresses can be whitelisted for secure access.
     </Aside>
-
-  </TabItem>
-  
-  <TabItem label="Physical Transfer Approach">
     <Steps>
-    1. **End-customer [self hosts Distr](/docs/self-hosting/getting-started/) in their internal environment**
-    2. **Vendors deliver media to customer environment to be deployed internally via Distr**
-    3. **Reach out to support@glasskube.com for more detailed information of how Distr can enable this end-customer use case**
+    1. Set Up Your [Registry](/docs/guides/container-registry/)
+    2. Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)
+    3. White-label the [Customer portal](/docs/product/branding/)
+    4. Onboard your first [customer](/docs/guides/onboarding-a-new-customer/)
+    5. Request IP Allowlist for Customer Access
+    6. Customer creates a [Personal Access token](/docs/integrations/personal-access-token/)
+    7. Customer can [access and pull](/docs/guides/container-registry-for-end-customers/#registry-quickstart-from-the-customer-portal) your private artifacts
     </Steps>
+  </TabItem>
 
-    <Aside type="tip">
+  <TabItem label="Physical Transfer Approach">
+    <Aside type="note">
       This approach is ideal for completely isolated environments with no external network
       connectivity, using cryptographically verified physical transfers instead.
     </Aside>
-
+    <Steps>
+    1. End-customer [self hosts Distr](/docs/self-hosting/getting-started/) in their internal environment
+    2. Vendors deliver media to customer environment to be deployed internally via Distr
+    3. Reach out to support@glasskube.com for more detailed information of how Distr can enable this end-customer use case
+    </Steps>
   </TabItem>
 </Tabs>
